added hero section

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+*,
+*::after,
+*::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 :root {
   --clr-primary: #5a58db;
   --clr-accent: #90b7f1;
@@ -6,10 +13,16 @@
 
 body {
   background-color: var(--clr-gry);
+  overflow-x: hidden;
 }
 
 .bg_color {
   background: var(--clr-primary) !important;
+}
+
+.nav_fixed {
+  position: fixed;
+  width: 100%;
 }
 
 .txt_color {
@@ -67,6 +80,78 @@ body {
   transform: translateX(7.5px);
 }
 
-/* .login_btn:hover .arrow_ {
-  margin-left: 1rem;
-} */
+.hero-section {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  height: 100vh;
+}
+
+.img_section {
+  display: flex;
+  justify-content: end;
+  align-items: flex-end;
+}
+.img_doctor {
+  height: 70vh;
+}
+
+.heading__ {
+  font-weight: bold;
+  position: relative;
+  margin: 5rem 0 0 0;
+}
+.title_section {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 4rem;
+}
+
+button.btn_book_appointment {
+  border: none;
+  outline: 2px solid var(--clr-primary);
+  color: var(--clr-primary);
+  border-radius: 0.25em;
+  padding: 0.4em 0.8em;
+}
+
+.btn_1 {
+  position: relative;
+  z-index: 1;
+  transition: color 150ms ease-in-out 100ms;
+}
+.btn_1::after {
+  border-radius: 0.25em;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--clr-primary);
+  z-index: -1;
+  transition: transform ease 250ms;
+  transform: scaleX(0);
+  transform-origin: right;
+}
+.btn_1:hover {
+  color: white;
+}
+.btn_1:hover::after {
+  transform-origin: left;
+  transform: scaleX(1);
+}
+
+.p.desc {
+  margin: 1rem 0 2rem 0;
+}
+
+.heading__::before {
+  content: "";
+  position: absolute;
+  width: 12.5%;
+  height: 6.5px;
+  background-color: var(--clr-primary);
+  border-radius: 2rem;
+  top: -0.25rem;
+}
