--- a/style.css
+++ b/style.css
@@ -227,3 +227,50 @@ button.btn_book_appointment {
   border: 1px solid var(--clr-accent);
   font-weight: bold;
 }
+.pbox{
+  display: grid;
+  grid-template-columns: 1fr 1fr 0.1fr;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+  margin-left: 18rem;
+  width: 40rem;
+  height: 15rem;
+  border: 3px solid black;
+  background-color: #DBDFFD;
+  border-radius: 10px;
+  box-shadow: 4px 4px 10px #333;
+}
+.list{
+  list-style-type: none;
+
+}
+.dat{
+  font-size: 22px;
+}
+.tok{
+  font-weight: bold;
+  padding: 10px;
+  margin: 1rem;
+  width: 30px;
+  background-color:var(--clr-accent);
+  border-radius: 20px;
+}
+.patient_img{
+  margin-top: 2rem;
+  width: 15rem;
+  padding: 4px;
+  border: 2px solid black;
+}
+
+.blood{
+  margin-top: 1rem;
+  margin-right: 2rem;
+}
+.blood_{
+  font-weight: bold;
+  color: white;
+  padding: 5px;
+  width: 38px;
+  background-color: #F24C4C;
+  border-radius: 25px;
+}
