--- a/style.css
+++ b/style.css
@@ -97,9 +97,20 @@ body {
 }
 
 .heading__ {
+  font-size: 5rem;
   font-weight: bold;
   position: relative;
   margin: 5rem 0 2rem 0;
+}
+
+.heading__::before {
+  content: "";
+  position: absolute;
+  width: 19.5%;
+  height: 9.5px;
+  background-color: var(--clr-primary);
+  border-radius: 2rem;
+  top: 0.1rem;
 }
 .title_section {
   display: flex;
@@ -148,32 +159,23 @@ button.btn_book_appointment {
   margin: 1rem 0 2rem 0;
 }
 
-.heading__::before {
-  content: "";
-  position: absolute;
-  width: 12.5%;
-  height: 6.5px;
-  background-color: var(--clr-primary);
-  border-radius: 2rem;
-  top: -0.25rem;
-}
-.foot{
+.foot {
   display: flex;
   padding: 1.5rem;
   background-color: var(--clr-primary);
 }
-.social{
+.social {
   margin-top: 1rem;
   margin-left: 23rem;
 }
-.don{
+.don {
   height: 10vh;
- 
- padding: 0rem;
- background-color: red;
+
+  padding: 0rem;
+  background-color: red;
 }
 
-.inp{
+.inp {
   padding: 0px;
   border: 2px solid white;
   border-radius: 10px;
@@ -184,50 +186,49 @@ button.btn_book_appointment {
   box-shadow: 4px 4px 10px grey;
 }
 
-.data_inp{
+.data_inp {
   width: 200px;
   margin-bottom: 10px;
   border-radius: 5px;
 }
 
-.but_app{
+.but_app {
   margin-top: 20px;
   padding: 8px;
   border-radius: 30px;
-  background-color: var(--clr-accent) ;
+  background-color: var(--clr-accent);
   border: 1px solid var(--clr-accent);
   font-weight: bold;
 }
 
-.but_app:hover{
-
+.but_app:hover {
   background-color: var(--clr-primary);
   color: white;
   border: 1px solid var(--clr-primary);
   font-weight: bold;
 }
-.log{
+.log {
   padding: 2rem;
   margin: 11.5rem;
   border: 1px solid white;
   background-color: white;
   border-radius: 10px;
-   box-shadow: 4px 4px 10px grey;
-   width: 30rem;
+  box-shadow: 4px 4px 10px grey;
+  width: 30rem;
 }
-.in_dat{
+.in_dat {
   margin: 10px;
 }
-.but_{
+.but_ {
   margin-top: 1rem;
   padding: 4px;
   width: 80px;
   border-radius: 30px;
-  background-color: var(--clr-accent) ;
+  background-color: var(--clr-accent);
   border: 1px solid var(--clr-accent);
   font-weight: bold;
 }
-.pbox{
+.pbox {
   display: grid;
   grid-template-columns: 1fr 1fr 0.1fr;
   margin-top: 4rem;
@@ -236,41 +237,40 @@ button.btn_book_appointment {
   width: 40rem;
   height: 15rem;
   border: 3px solid black;
-  background-color: #DBDFFD;
+  background-color: #dbdffd;
   border-radius: 10px;
   box-shadow: 4px 4px 10px #333;
 }
-.list{
+.list {
   list-style-type: none;
-
 }
-.dat{
+.dat {
   font-size: 22px;
 }
-.tok{
+.tok {
   font-weight: bold;
   padding: 10px;
   margin: 1rem;
   width: 30px;
-  background-color:var(--clr-accent);
+  background-color: var(--clr-accent);
   border-radius: 20px;
 }
-.patient_img{
+.patient_img {
   margin-top: 2rem;
   width: 15rem;
   padding: 4px;
   border: 2px solid black;
 }
 
-.blood{
+.blood {
   margin-top: 1rem;
   margin-right: 2rem;
 }
-.blood_{
+.blood_ {
   font-weight: bold;
   color: white;
   padding: 5px;
   width: 38px;
-  background-color: #F24C4C;
+  background-color: #f24c4c;
   border-radius: 25px;
 }
